--- a/kidsGAme/Base.lproj/Main.storyboard
+++ b/kidsGAme/Base.lproj/Main.storyboard
@@ -1,24 +1,100 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aQd-GM-jFd">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="kidsGAme" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" image="istockphoto-1223401490-170667a" translatesAutoresizingMaskIntoConstraints="NO" id="M1p-4O-KnG">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="5f6e43c42c89f6b5df258fd89924b97e_fgraphic-removebg-preview" translatesAutoresizingMaskIntoConstraints="NO" id="SzO-zW-kMo">
+                                <rect key="frame" x="98" y="67" width="196" height="164"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="164" id="kpR-Ih-HFm"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dd3-X0-aRS">
+                                <rect key="frame" x="102" y="360" width="188" height="132"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="132" id="I4h-L8-W4B"/>
+                                    <constraint firstAttribute="width" constant="188" id="dtc-Cm-S4r"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="55"/>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="M1p-4O-KnG" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="6lR-JC-7De"/>
+                            <constraint firstItem="dd3-X0-aRS" firstAttribute="top" secondItem="SzO-zW-kMo" secondAttribute="bottom" constant="129" id="6zz-Vx-HBt"/>
+                            <constraint firstItem="M1p-4O-KnG" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="LTk-ML-LAE"/>
+                            <constraint firstItem="SzO-zW-kMo" firstAttribute="centerX" secondItem="dd3-X0-aRS" secondAttribute="centerX" id="O0g-IR-yFL"/>
+                            <constraint firstAttribute="bottom" secondItem="M1p-4O-KnG" secondAttribute="bottom" id="Xl9-IL-2Qd"/>
+                            <constraint firstItem="SzO-zW-kMo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="98" id="cdV-LV-bou"/>
+                            <constraint firstItem="SzO-zW-kMo" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="jqx-dD-3Me"/>
+                            <constraint firstItem="M1p-4O-KnG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="rgx-bi-ge3"/>
+                            <constraint firstItem="dd3-X0-aRS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="102" id="tam-DW-URg"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dd3-X0-aRS" secondAttribute="trailing" constant="103" id="xwd-Gv-DyJ"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="voT-Aj-wkX"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1057.2519083969464" y="-34.507042253521128"/>
+        </scene>
+        <!--Game Page1-->
+        <scene sceneID="aED-AN-hPS">
+            <objects>
+                <viewController storyboardIdentifier="gamePage1" id="L6k-74-XJ1" customClass="gamePage1" customModule="kidsGAme" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pbL-n3-BTk">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="dTl-OS-qcx"/>
+                        <color key="backgroundColor" red="0.30757841470000002" green="0.83471196889999999" blue="0.85922044519999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="25W-gx-pSn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1747.3282442748091" y="-35.211267605633807"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="kGz-3u-U8w">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="aQd-GM-jFd" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="jIQ-4c-Pbe">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="zlS-ab-Ddv"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qDw-jA-nid" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="130.53435114503816" y="-34.507042253521128"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="55" width="170" height="128"/>
+        <image name="5f6e43c42c89f6b5df258fd89924b97e_fgraphic-removebg-preview" width="500" height="500"/>
+        <image name="istockphoto-1223401490-170667a" width="560" height="1002"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
